# mnist-on-wasm

./: .gitignore
_mnist-playground/: Cargo.toml  README.md
_mnist-playground/assets/: CONTEXT.md
_mnist-playground/src/: main.rs
_wasm-in-web-worker/: CONTEST.md  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  server.ts  style.css
mnist-on-wasm/: Cargo.toml  build.sh  package.json  server.ts
mnist-on-wasm/assets/: index.html  worker.js
mnist-on-wasm/src/: lib.rs  mnist_model.rs
