[package]
name = "mnist-on-wasm"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
image = "0.25.5"
ndarray = "0.16.1"
tract-onnx = "0.21.11"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.77", features = [
     "console", "Document", "Element", "HtmlElement", "HtmlCanvasElement", "CanvasRenderingContext2d", "ImageData", "Window", "Worker", "Event", "MouseEvent"
]}
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.77"
